--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Made BY Devil's</title>
-        <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
@@ -17,9 +17,6 @@
             }
         };
     </script>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -110,181 +107,199 @@
     </style>
 </head>
 <body class="flex flex-col items-start bg-gray-100 dark:bg-gray-900">
-    <nav class="flex flex-col lg:flex-row justify-between w-full h-auto bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
-        <div class="flex justify-between items-center w-full lg:w-auto">
-            <span class="px-6 py-2 font-semibold text-xl text-white transition-transform transform hover:-translate-y-1">
-                Mr.Kind
-            </span>
-            <button id="hamburger" class="lg:hidden text-white">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M3 5h14a1 1 0 110 2H3a1 1 0 010-2zM3 9h14a1 1 0 110 2H3a1 1 0 010-2zM3 13h14a1 1 0 110 2H3a1 1 0 010-2z" clip-rule="evenodd" />
-                </svg>
-            </button>
-        </div>
-        <ul id="mobileMenu" class="hidden lg:flex lg:flex-row lg:space-x-4 lg:items-center w-full bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 lg:bg-transparent lg:shadow-none shadow-lg">
-            <a href="https://786promax.github.io/rocketfuel.github.io/"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Home</li></a>
-            <a href="https://github.com/786promax"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">About Us</li></a>
-            <a href="https://www.youtube.com/@KurulusOsmanUrduatv"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Youtube</li></a>
-            <a href="https://discord.gg/nickuc-com-plugins-527913497435308042"><li class="text-white px-3 py-2 rounded hover:bg-orange-500">Join Us</li></a>
+    <nav class="flex justify-between w-full h-[74px] bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
+        <span class="px-6 py-2 font-semibold text-xl text-white transition-transform transform hover:-translate-y-1">
+            Aatif's Website
+        </span>
+        <ul class="hidden lg:flex space-x-4">
+            <a href="https://786promax.github.io/rocketfuel.github.io/"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Home</li></a>
+            <a href="https://github.com/786promax"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">About Us</li></a>
+            <a href="https://www.youtube.com/@KurulusOsmanUrduatv"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Youtube</li></a>
+            <a href="https://discord.gg/nickuc-com-plugins-527913497435308042"><li class="border-2 border-slate-200 hover:border-slate-800 transition-transform transform hover:-translate-y-1 px-4 py-1 rounded-full hover:bg-orange-500">Join Us</li></a>
+          
         </ul>
+          <button class="block lg:hidden text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M3 5h14a1 1 0 110 2H3a1 1 0 010-2zM3 9h14a1 1 0 110 2H3a1 1 0 010-2zM3 13h14a1 1 0 110 2H3a1 1 0 010-2z" clip-rule="evenodd" />
+            </svg>
+        </button>
     </nav>
-
+</body>
     <div
     class="max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16 bg-white transform-gpu transition-transform hover:-translate-y-1 hover:shadow-xl hover:shadow-fuchsia-200 rounded-lg text-gray-900  dark:hover:shadow-green-900 dark:hover:shadow-2xl dark:bg-slate-600">
-        <div class="rounded-t-lg h-32 overflow-hidden">
-            <img class="object-cover object-center h-60 w-96" src='https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg' alt='kkkm'>
-        </div>
-        <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
-            <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='Screenshot 2024-12-06 201206.png' alt='Woman looking front'>
-        </div>
-        <div class="text-center mt-2">
-            <h2 class="font-semibold dark:text-gray-50">Aatif</h2>
-            <p class="text-gray-500 dark:text-gray-200">Owner/Developer</p>
-        </div>
-        <ul class="py-4 mt-2 text-gray-700 flex items-center justify-around">
-            <li class="flex flex-col items-center justify-around">
-                <img id="user" src="user.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-                <div class="dark:text-white font-semibold">99+</div>
-            </li>
-            <li class="flex flex-col items-center justify-between">
-                <img id="train" src="train.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-                <div class="dark:text-white font-semibold">99+</div>
-            </li>
-            <li class="flex flex-col items-center justify-around">
-                <img id="star" src="star.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
-                <div class="dark:text-white font-semibold">99+</div>
-            </li>
-        </ul>
+    <div class="rounded-t-lg h-32 overflow-hidden">
+        <img class="object-cover object-center h-60 w-96" src='https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg' alt='kkkm'>
     </div>
+    <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
+        <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='Screenshot 2024-12-06 201206.png' alt='Woman looking front'>
+    </div>
+    <div class="text-center mt-2">
+        <h2 class="font-semibold dark:text-gray-50">Aatif</h2>
+        <p class="text-gray-500 dark:text-gray-200">Owner/Developer</p>
+    </div>
+    <ul class="py-4 mt-2 text-gray-700 flex items-center justify-around">
+        <li class="flex flex-col items-center justify-around">
+            <img id="user" src="user.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
 
-    <script>
-        // Hamburger Menu Toggle Logic
-        const hamburger = document.getElementById('hamburger');
-        const mobileMenu = document.getElementById('mobileMenu');
+            <div class="dark:text-white font-semibold">99+</div>
+        </li>
+        <li class="flex flex-col items-center justify-between">
+            <img id="train" src="train.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
 
-        hamburger.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden'); // Show or hide the menu
-            mobileMenu.classList.toggle('block');  // Ensure it takes up space when visible
-        });
-    </script>
+            <div class="dark:text-white font-semibold">99+</div>
+        </li>
+        <li class="flex flex-col items-center justify-around">
+            <img id="star" src="star.svg" alt="Star Icon" class="w-4 text-blue-900 hover:shadow-lg transform-gpu transition-transform hover:-translate-y-1 hover:shadow-green-300">
+
+            <div class="dark:text-white font-semibold">99+</div>
+        </li>
+    </ul>
+    <div class="p-4 border-t mx-8 mt-2">
+    </div>
 </div>
 </body>
+<script src="spaghetti.js"></script>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #282c34;
-            color: #fff;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
         }
-
+        .text-center {
+            text-align: center;
+        }
+        .fancy-button {
+            background-color: #FF7F50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .fancy-button:hover {
+            background-color: #FF4500;
+        }
         .modal {
             display: none;
             position: fixed;
-            top: 0;
+            z-index: 1;
             left: 0;
+            top: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            z-index: 10;
-            justify-content: center;
-            align-items: center;
+            overflow: auto;
+            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.4);
+            padding-top: 60px;
         }
-
         .modal-content {
-            background-color: #fff;
-            color: #000;
+            background-color: #fefefe;
+            margin: 5% auto;
             padding: 20px;
+            border: 1px solid #888;
+            width: 30%;
             border-radius: 10px;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
-
         .close {
-            font-size: 24px;
-            font-weight: bold;
             color: #aaa;
-            cursor: pointer;
             float: right;
+            font-size: 28px;
+            font-weight: bold;
         }
-
-        .close:hover {
-            color: #000;
+        .close:hover, .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
         }
-
+        .avatar {
+            width: 100px;
+            border-radius: 50%;
+        }
+        .container {
+            padding: 16px;
+        }
         input[type="text"], input[type="password"] {
             width: 100%;
             padding: 10px;
             margin: 8px 0;
+            display: inline-block;
             border: 1px solid #ccc;
+            box-sizing: border-box;
             border-radius: 5px;
         }
-
-        .fancy-button {
-            padding: 10px 20px;
-            background-color: #ff7f50;
+        .cancelbtn {
+            background-color: #f44336;
             color: white;
+            padding: 10px 18px;
             border: none;
-            border-radius: 5px;
             cursor: pointer;
-            font-weight: bold;
+            border-radius: 5px;
         }
-
-        .fancy-button:hover {
-            background-color: #ff4500;
+        .cancelbtn:hover {
+            background-color: #d32f2f;
+        }
+        .error-message {
+            color: red;
+            font-size: 14px;
+            margin-top: 10px;
         }
     </style>
     <script>
-        // Modal Control Functions
-        function showModal() {
-            const modal = document.getElementById('modal');
-            modal.style.display = 'flex'; // Show the modal
-            console.log('Modal opened');
-        }
-
-        function hideModal() {
-            const modal = document.getElementById('modal');
-            modal.style.display = 'none'; // Hide the modal
-            console.log('Modal closed');
-        }
-
         function redirectToSite(event) {
-            event.preventDefault(); // Prevent form submission
+            event.preventDefault(); // Prevent the form from submitting
+            
             const username = document.getElementById('uname').value;
             const password = document.getElementById('psw').value;
 
             if (username === 'killman' && password === 'aattiiff') {
                 alert('Login successful!');
-                window.location.href = "https://786promax.github.io/voie.github.io/";
+                window.location.href = "https://786promax.github.io/voie.github.io/"; // Redirect to the desired page
             } else {
-                alert('Invalid username or password.');
+                const errorMessage = document.getElementById('error-message');
+                errorMessage.textContent = 'Invalid username or password.';
             }
         }
     </script>
 </head>
 <body>
-    <button onclick="showModal()" class="fancy-button">Don't click me</button>
 
-    <!-- Modal -->
-    <div id="modal" class="modal">
+    <h2 style="color:#FFE5B4;" class="text-center mt-6 text-2xl font-semibold">Don't click the button below :</h2>
+    <div class="flex justify-center mt-4">
+        <button onclick="document.getElementById('id01').style.display='block'" class="fancy-button">
+            Don't click me
+        </button>
+    </div>
+
+    <div id="id01" class="modal">
         <div class="modal-content">
-            <span onclick="hideModal()" class="close">&times;</span>
-            <form onsubmit="redirectToSite(event)">
-                <label for="uname">Username:</label>
-                <input type="text" id="uname" placeholder="Enter Username" required>
+            <div class="imgcontainer">
+                <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+                <img src="op.png" alt="Avatar" class="avatar">
+            </div>
+            <form id="loginForm" onsubmit="return redirectToSite(event)">
+                <div class="container">
+                    <label for="uname"><b>Username</b></label>
+                    <input type="text" id="uname" placeholder="Enter Username" required>
 
-                <label for="psw">Password:</label>
-                <input type="password" id="psw" placeholder="Enter Password" required>
+                    <label for="psw"><b>Password</b></label>
+                    <input type="password" id="psw" placeholder="Enter Password" required>
 
-                <button type="submit" class="fancy-button">Login</button>
+                    <button type="submit" class="fancy-button">Login</button>
+                    <label>
+                        <input type="checkbox" checked="checked" name="remember"> Remember me
+                    </label>
+                </div>
+                <div class="container" style="background-color:#f1f1f1">
+                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">
+                        Cancel
+                    </button>
+                    <span class="psw">Forgot <a href="#">password?</a></span>
+                </div>
+                <p id="error-message" class="error-message"></p>
             </form>
         </div>
     </div>
+
 </body>
 </html>
