--- a/index.html
+++ b/index.html
@@ -255,6 +255,19 @@
             font-size: 14px;
             margin-top: 10px;
         }
+
+        @media (max-width: 768px) {
+            .modal-content {
+                width: 90%;
+            }
+            .fancy-button {
+                padding: 15px;
+                font-size: 16px;
+            }
+            input[type="text"], input[type="password"] {
+                padding: 12px;
+            }
+        }
     </style>
     <script>
         function redirectToSite(event) {
@@ -313,4 +326,5 @@
     </div>
 
 </body>
+
 </html>
