--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
 
         .modal-content {
-            background: url('a92e5adbeb37595441230f499becea22.jpg') no-repeat center center;
+            background: url('img_avatar2.svg') no-repeat center center;
             background-size: cover;
             margin: 5% auto;
             padding: 20px;
