--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
         <img class="object-cover object-center h-60 w-96" src='https://img.freepik.com/free-photo/ultra-detailed-nebula-abstract-wallpaper-4_1562-749.jpg' alt='kkkm'>
     </div>
     <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white dark:border-black rounded-full overflow-hidden">
-        <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='Screenshot 2024-12-06 201206.png' alt='Woman looking front'>
+        <img class="object-cover object-center h-[190px] dark:bg-black -my-9 mx-[1px]" src='a92e5adbeb37595441230f499becea22.jpg' alt='Woman looking front'>
     </div>
     <div class="text-center mt-2">
-        <h2 class="font-semibold dark:text-gray-50">Aatif</h2>
+        <h2 class="font-semibold dark:text-gray-50">786𝓴𝓾𝓻𝓾𝓵𝓾ş</h2>
         <p class="text-gray-500 dark:text-gray-200">Owner/Developer</p>
     </div>
     <ul class="py-4 mt-2 text-gray-700 flex items-center justify-around">
