--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
     </style>
 <body>
 
-    <h2 style="color:#FFE5B4;" class="text-center mt-6 text-2xl font-semibold">Don't click the button below :</h2>
+    <h2 style="color:#FFE5B4;" class="text-center mt-6 text-2xl font-semibold">Click below To find something :</h2>
     <div class="flex justify-center mt-4">
         <button onclick="document.getElementById('id01').style.display='block'" class="fancy-button">
-            Don't click me
+            Puzzle 
         </button>
     </div>
 
