--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">
                         Cancel
                     </button>
-                    <span class="psw">Forgot <a href="#">password?</a></span>
+                    <span class="psw">Forgot <a href="#">password..12345678?</a></span>
                 </div>
                 <p id="error-message" class="error-message"></p>
             </form>
