--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             const username = document.getElementById('uname').value;
             const password = document.getElementById('psw').value;
 
-            if (username === '786𝓴𝓾𝓻𝓾𝓵𝓾ş' && password === '12345678') {
+            if (username === 'killman' && password === '12345678') {
                 alert('Login successful!');
                 window.location.href = "https://786promax.github.io/voie.github.io/"; // Redirect to the desired page
             } else {
