--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kurulus</title>
+    <title>786Kurulus</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
@@ -29,14 +29,16 @@
 <body class="bg-gray-100 dark:bg-gray-900">
     <nav class="flex items-center justify-between w-full h-auto bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 p-4">
         <span class="px-6 py-2 font-semibold text-xl text-white transition-transform transform hover:-translate-y-1 whitespace-nowrap">
-           Kurulus&#8482;
+           786Kurulus&#8482;
         </span>
 
         <div class="flex-1"></div>
 
         <ul id="desktopMenu" class="hidden lg:flex lg:flex-row lg:space-x-6 lg:items-center w-auto">
-            <a href="about.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">About</li></a>
-            <a href="ordertemp.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
+        <a href="inex.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">About Us</li></a>
+        <a href="dc.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Discord </li></a>
+        <a href="yt.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Youtube</li></a>
+        <a href="order.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
         </ul>
 
         <button id="hamburger" class="lg:hidden text-white ml-4">
@@ -47,8 +49,10 @@
     </nav>
 
     <ul id="mobileMenu" class="hidden flex-col items-center w-full bg-gradient-to-r from-indigo-500 via-sky-500 to-emerald-500 text-white text-lg p-4 absolute top-16 left-0 z-50 shadow-lg">
-        <a href="about.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">About</li></a>
-        <a href="ordertemp.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
+        <a href="about.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">About Us</li></a>
+        <a href="dc.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Discord </li></a>
+        <a href="yt.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Youtube</li></a>
+        <a href="order.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
     </ul>
 
     <script>
@@ -63,9 +67,9 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Pure. Natural. Trusted.</h1>
-            <p>Experience the essence of nature with our premium cold pressed oils.</p>
-            <a href="ordertemp.html" class="btn">Place an Order</a>
+            <h1>Best. Trusted.</h1>
+            <p>Experience the essence of Premium Gameplay .</p>
+            <a href="order.html" class="btn">Place an Order</a>
         </div>
     </section>
 
@@ -73,7 +77,7 @@
         <div class="about-container">
             <div class="about-text">
                 <h2>Who We Are</h2>
-                <p>At <strong>Harvest Sure</strong>, we are dedicated to providing high-quality, natural cold pressed oils sourced from the finest ingredients. Our mission is to bring purity and health to every home.</p>
+                <p>At <strong>Mineblood Studio</strong>, we are dedicated to providing high-quality, Gameplay sourced from the finest code. Our mission is to bring Happiness to every home.</p>
                 <a href="about.html" class="btn">About Us</a>
             </div>
         </div>
@@ -83,13 +87,13 @@
         <div class="order-content">
             <h2>Order Your Oil</h2>
             <p>Get premium, organic oils delivered to your doorstep.</p>
-            <a href="ordertemp.html" class="btn">🛒 Order Now</a>
+            <a href="order.html" class="btn">🛒 Order Now</a>
         </div>
     </section>
 
 
     <footer>
-        <p>&copy; 2025 Eugene Biotech PVT. LTD. All rights reserved.</p>
+        <p>&copy; 2025 Mineblood Studio PVT. LTD. All rights reserved.</p>
     </footer>
 </body>
 </html>
