--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     <section id="order" class="order-section">
         <div class="order-content">
-            <h2>Order Your Oil</h2>
-            <p>Get premium, organic oils delivered to your doorstep.</p>
+            <h2>Order Now</h2>
+            <p>Get premium, high-quality And lagg-less game delivered to you.</p>
             <a href="order.html" class="btn">🛒 Order Now</a>
         </div>
     </section>
