--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="flex-1"></div>
 
         <ul id="desktopMenu" class="hidden lg:flex lg:flex-row lg:space-x-6 lg:items-center w-auto">
-        <a href="inex.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">About Us</li></a>
+        <a href="about.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">About Us</li></a>
         <a href="dc.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Discord </li></a>
         <a href="yt.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Youtube</li></a>
         <a href="order.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
@@ -77,7 +77,7 @@
         <div class="about-container">
             <div class="about-text">
                 <h2>Who We Are</h2>
-                <p>At <strong>Mineblood Studio</strong>, we are dedicated to providing high-quality, Gameplay sourced from the finest code. Our mission is to bring Happiness to every home.</p>
+                <p>At <strong>Mineblood Studio</strong>, We are dedicated to providing high-quality, Gameplay sourced from the finest code. Our mission is to bring Happiness to every home.</p>
                 <a href="about.html" class="btn">About Us</a>
             </div>
         </div>
@@ -86,7 +86,7 @@
     <section id="order" class="order-section">
         <div class="order-content">
             <h2>Order Now</h2>
-            <p>Get premium, high-quality And lagg-less game delivered to you.</p>
+            <p>Get premium, High-quality And Lagg-less game delivered to you.</p>
             <a href="order.html" class="btn">🛒 Order Now</a>
         </div>
     </section>
