--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <a href="dc.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Discord </li></a>
         <a href="yt.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Youtube</li></a>
         <a href="order.html"><li class="border-2 border-slate-200 hover:border-2 hover:border-slate-800 transform-gpu transition-transform text-white hover:bg-orange-500 hover:-translate-y-1 px-4 rounded-full py-[5px]">Order</li></a>
+        <a href="/login"> <li class="flex items-center space-x-2 border-2 border-yellow-300 hover:border-yellow-500 transform-gpu transition-transform text-white hover:bg-yellow-400 hover:text-black hover:-translate-y-1 px-4 rounded-full py-[5px] font-semibold
+        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-5 h-5" alt="Google logo">
+         <span>Login</span>
+                    </li>
         </ul>
 
         <button id="hamburger" class="lg:hidden text-white ml-4">
